--- a/webext/manifest.json
+++ b/webext/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
   "name": "Dotjs-NH",
   "version": "0",
+  "description": "Execute JavaScript files from ~/.js and load CSS files from ~/.css based on site domain.",
   "permissions": [
     "nativeMessaging",
     "webNavigation",
